[gd_scene load_steps=2 format=3 uid="uid://dq0xbrkiamhd6"]

[ext_resource type="Script" path="res://network/rtc_menu.gd" id="1_xrhgy"]

[node name="WebRTCMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrhgy")

[node name="Options" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
offset_top = 2.0
offset_right = 64.0
offset_bottom = 28.0
text = "WebRTC"

[node name="Find" type="Button" parent="Options"]
layout_mode = 2
offset_left = 68.0
offset_right = 110.0
offset_bottom = 31.0
text = "Find"

[node name="Create" type="Button" parent="Options"]
layout_mode = 2
offset_left = 114.0
offset_right = 174.0
offset_bottom = 31.0
text = "Create"

[node name="Join" type="Button" parent="Options"]
layout_mode = 2
offset_left = 178.0
offset_right = 216.0
offset_bottom = 31.0
text = "Join"

[node name="Room" type="LineEdit" parent="Options"]
layout_mode = 2
offset_left = 220.0
offset_right = 684.0
offset_bottom = 31.0
size_flags_horizontal = 3
placeholder_text = "Game Code"
caret_blink = true
caret_blink_interval = 0.5

[node name="URL" type="HBoxContainer" parent="Options"]
layout_mode = 2
offset_left = 688.0
offset_right = 1152.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Options/URL"]
layout_mode = 2
offset_top = 2.0
offset_right = 75.0
offset_bottom = 28.0
text = "Signaling:"

[node name="LineEdit" type="LineEdit" parent="Options/URL"]
layout_mode = 2
offset_left = 79.0
offset_right = 464.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "wss://no-war.fales.me/plunge"
caret_blink = true
caret_blink_interval = 0.5

[node name="Log" type="TextEdit" parent="."]
layout_mode = 2
offset_top = 35.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3
editable = false

[connection signal="pressed" from="Options/Find" to="." method="_on_find_pressed"]
[connection signal="pressed" from="Options/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Options/Join" to="." method="_on_join_pressed"]
